fix: 상품 수정 테스트가 제대로 동작하지 않던 문제 수정